--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,9 @@
 
 @theme {
   --font-*: initial;
-  --font-outfit: Outfit, sans-serif;
+  --font-sans: var(--font-google-sans-code), var(--font-sarabun), "Google Sans Code", Sarabun, sans-serif;
+  --font-google-sans-code: "Google Sans Code", sans-serif;
+  --font-sarabun: Sarabun, sans-serif;
 
   --breakpoint-*: initial;
   --breakpoint-2xsm: 375px;
@@ -188,7 +190,7 @@
     cursor: pointer;
   }
   body {
-    @apply relative font-normal font-outfit z-1 bg-gray-50;
+    @apply relative font-normal font-sans z-1 bg-gray-50;
   }
 }
 
